--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,6 +19,7 @@
                         {{ form_widget(form) }}
                         {{ form_end(form) }}
                     </form>
+                    <a href="{{ path('register') }}">{{ 'login.registerBtn'|trans }}</a>
                 </div>
             </div>
         </div>
