--- a/public/compiled/app.css
+++ b/public/compiled/app.css
@@ -1,8 +1,9 @@
 .plate {
   display: flex;
+  justify-content: center;
   width: 100%; }
   .plate .column {
-    background-color: lightgrey;
+    background-color: #ececec;
     display: flex;
     flex-direction: column;
     outline: 1px solid grey;
@@ -15,5 +16,13 @@
       background-color: dodgerblue; }
     .plate .plate-row.player2 {
       background-color: orangered; }
+
+.blue {
+  font-weight: 700;
+  color: dodgerblue; }
+
+.red {
+  font-weight: 700;
+  color: orangered; }
 
 /*# sourceMappingURL=app.css.map*/
